deployments/k8s/deployment.yaml
#@ load("@ytt:data", "data")
#@ load("@ytt:assert", "assert")
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cert-injection-webhook
  namespace: cert-injection-webhook
  labels:
    app: cert-injection-webhook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cert-injection-webhook
  template:
    metadata:
      labels:
        app: cert-injection-webhook
    spec:
      serviceAccountName: cert-injection-webhook-sa
      containers:
        - name: server
          image: #@ data.values.pod_webhook_image or assert.fail("missing pod_webhook_image")
          imagePullPolicy: Always
          args:
            #@ for label in data.values.labels:
            - #@ "-label={}".format(label)
            #@ end
            #@ for annotation in data.values.annotations:
            - #@ "-annotation={}".format(annotation)
            #@ end
          volumeMounts:
            - name: webhook-ca-cert
              mountPath: /run/config_maps/ca_cert
              readOnly: true
          ports:
            - containerPort: 8443
              name: webhook-port
      volumes:
        - name: webhook-ca-cert
          configMap:
            name: ca-cert
---
apiVersion: v1
kind: Service
metadata:
  name: cert-injection-webhook
  namespace: cert-injection-webhook
spec:
  selector:
    app: cert-injection-webhook
  ports:
    - port: 443
      targetPort: webhook-port
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: defaults.webhook.cert-injection.tanzu.vmware.com
webhooks:
  - name: defaults.webhook.cert-injection.tanzu.vmware.com
    clientConfig:
      service:
        name: cert-injection-webhook
        namespace: cert-injection-webhook
    rules:
      - operations: ["CREATE", "UPDATE"]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
